# open-clang

./: .gitignore  CLAUDE.md  PATHS-NOT-TAKEN.md  PROVENANCE.md  README.md
docs/design/: 01-architecture.md  02-shell-notes.md
docs/research/: 01-design-space.md  02-torque-measured.md  03-vocodex-measured.md  04-p2-measured.md  05-p3-measured.md  06-snare-measured.md
lab/: engine.py  hf_hang.py  m11_battery.py  nl2.py  null_ab.py  sd_snares.py  snare_autopsy.py
rt/: Cargo.toml
rt/cli/: Cargo.toml
rt/cli/src/: main.rs
rt/engine/: Cargo.toml
rt/engine/src/: lib.rs
testdata/probes-p1/: OPERATOR-NOTES.md  README.md
testdata/probes-p2/: OPERATOR-NOTES.md
testdata/probes-p3/: OPERATOR-NOTES.md
tools/: analyze_p1.py  analyze_p2.py  analyze_p2_map.py  compare_parity_m3.py  make_probes.py  make_probes_p2.py  qc.zsh  render_batch001.py  render_batch002.py  render_batch003.py  render_batch003b.py  render_batch003c.py  render_batch004.py  render_batch004b.py  render_batch004c.py  render_batch005.py  render_stereo_pilot.py
wrac/: Cargo.toml
wrac/crates/wrac_xtask/src/: commands.rs
wrac/plugins/clg/src-plugin/: Cargo.toml
wrac/plugins/clg/src-plugin/src/: audio.rs  lib.rs  plugin.rs  state.rs
wrac/plugins/clg/src-plugin/src/plugin/: audio_ports.rs  params.rs  state.rs
